[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "oxxius_laser"
authors = [{name = "Micah Woodard", email = "micah.woodard@alleninstitute.org"}]
version = "1.1.1"
dynamic = ["description"]
description-file='README.md'
dependencies = [
    'pyserial'
]